Fixed extra space issue

--- a/assets/css/layouts.scss
+++ b/assets/css/layouts.scss
@@ -158,7 +158,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   .vm-section {
     padding: 30px 15px;
   }
