--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -244,7 +244,7 @@ a:hover {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
 
   .el-collapse-item  {
     margin-bottom: 15px;
