--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -132,7 +132,7 @@ a {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   .vm-section__heading {
     margin-bottom: 20px;
 
